--- a/package.json
+++ b/package.json
@@ -1,26 +1,42 @@
 {
-  "name": "mern",
+  "name": "google-books",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
-  "dependencies": {
-    "express": "^4.17.1",
-    "mongoose": "^5.12.7",
-    "routes": "^2.1.0"
-  },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "if-env NODE_ENV=production && npm run start:prod || npm run start:dev",
+    "start:prod": "node server.js",
+    "start:dev": "concurrently \"nodemon --ignore 'client/*'\" \"npm run client\"",
+    "client": "cd client && npm run start",
+    "install": "cd client && npm install",
+    "build": "cd client && npm run build",
+    "heroku-postbuild": "npm run build",
+    "seed": "cd scripts && node seedOrg.js && node seedUser.js"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/CaitlinCollins/Google-Books.git"
+    "url": "git+https://github.com/CaitlinCollins/cause-affect.git"
   },
   "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/CaitlinCollins/Google-Books/issues"
+  "license": "MIT",
+  "devDependencies": {
+    "concurrently": "^4.1.0",
+    "nodemon": "^1.18.7"
   },
-  "homepage": "https://github.com/CaitlinCollins/Google-Books#readme"
+  "bugs": {
+    "url": "https://github.com/CaitlinCollins/cause-affect/issues"
+  },
+  "homepage": "https://github.com/CaitlinCollins/cause-affect#readme",
+  "dependencies": {
+    "@fullcalendar/daygrid": "^5.6.0",
+    "@fullcalendar/react": "^5.6.0",
+    "axios": "^0.21.1",
+    "express": "^4.17.1",
+    "fullcalendar": "^5.6.0",
+    "if-env": "^1.0.4",
+    "mongoose": "^5.12.7",
+    "mongoose-bcrypt": "^1.9.0",
+    "validator": "^13.6.0"
+  }
 }
